--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/style/styles.css" />
-    <title>Document</title>
+    <!--Font google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Mon-Portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <a href="">Presentation</a>
+      <a href="">Technologie</a>
+      <a href="">Projets</a>
+      <a href="">Contact</a>
+    </nav>
+    <header>
+      <h1>Developpeur Web Junior</h1>
+    </header>
+  </body>
 </html>
