Création de la section Aprops de moi et mise en forme scss

--- a/index.html
+++ b/index.html
@@ -15,13 +15,45 @@
   </head>
   <body>
     <nav>
-      <a href="">Presentation</a>
-      <a href="">Technologie</a>
+      <a href="#about">Presentation</a>
+      <a href="#technology">Technologie</a>
       <a href="">Projets</a>
       <a href="">Contact</a>
     </nav>
     <header>
       <h1>Developpeur Web Junior</h1>
     </header>
+    <main>
+      <section class="about_me" id="about">
+        <div class="infos">
+          <img src="./assets/image/moi.webp" alt="Photo de Hanafi M." />
+          <div class="infos_txt">
+            <h2 class="name">Hanafi Mohamed</h2>
+            <h2 class="city">Lyon</h2>
+          </div>
+        </div>
+
+        <h2>À propos de moi</h2>
+        <p>
+          Passionné par le développement web et animé par une envie constante
+          d’apprentissage, je suis à la recherche d’une opportunité pour débuter
+          ma carrière dans ce domaine en pleine évolution.
+        </p>
+        <p>
+          Mon intérêt pour la technologie et ma curiosité me poussent à
+          approfondir mes compétences et à explorer de nouvelles approches dans
+          le développement web. Je suis persuadé que ma motivation et mon
+          engagement me permettront de m’intégrer facilement à une équipe et
+          d’apporter une contribution précieuse aux projets.
+        </p>
+        <p>
+          Bien que toujours en phase d’apprentissage, je suis prêt à relever les
+          défis et à m’investir pleinement pour acquérir de l’expérience. Mon
+          esprit collaboratif, ma rigueur et ma détermination font de moi un
+          candidat sérieux, prêt à saisir chaque opportunité pour progresser et
+          évoluer dans ce domaine.
+        </p>
+    
+    </main>
   </body>
 </html>
