Création de la section technology , Ajout et redemension, compression  des icones

--- a/index.html
+++ b/index.html
@@ -53,7 +53,55 @@
           candidat sérieux, prêt à saisir chaque opportunité pour progresser et
           évoluer dans ce domaine.
         </p>
-    
+      </section>
+      <div class="dashed-line"></div>
+      <section class="technology" id="technology">
+        <h2>Technologies et Langages</h2>
+        <p>
+          Voici les technologies et langages que je maîtrise et utilise pour
+          concevoir des applications performantes et innovantes.
+        </p>
+        <div class="carousel">
+          <div class="item">
+            <img
+              src="./assets/Icônes/html.png"
+              alt="logo reprensantant le languague html"
+            />
+            <img
+              src="./assets/Icônes/css.png"
+              alt="logo reprensantant le languague html"
+            />
+            <img
+              src="./assets/Icônes/javascrip.png"
+              alt="logo reprensantant le languague html"
+            />
+            <img
+              src="./assets/Icônes/react.png"
+              alt="logo reprensantant le languague html"
+            />
+            <img
+              src="./assets/Icônes/redux.png"
+              alt="logo reprensantant le languague html"
+            />
+            <img
+              src="./assets/Icônes/vite.png"
+              alt="logo reprensantant le languague html"
+            />
+            <img
+              src="./assets/Icônes/sass.png"
+              alt="logo reprensantant le languague html"
+            />
+            <img
+              src="./assets/Icônes/mongodb.png"
+              alt="logo reprensantant le languague html"
+            />
+            <img
+              src="./assets/Icônes/github.png"
+              alt="logo reprensantant le languague html"
+            />
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
