Fin de la mise en place de la section technology

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <script src="./assets/Javascript/Technology.js" defer></script>
     <title>Mon-Portfolio</title>
   </head>
   <body>
@@ -61,44 +62,18 @@
           Voici les technologies et langages que je maîtrise et utilise pour
           concevoir des applications performantes et innovantes.
         </p>
-        <div class="carousel">
-          <div class="item">
-            <img
-              src="./assets/Icônes/html.png"
-              alt="logo reprensantant le languague html"
-            />
-            <img
-              src="./assets/Icônes/css.png"
-              alt="logo reprensantant le languague html"
-            />
-            <img
-              src="./assets/Icônes/javascrip.png"
-              alt="logo reprensantant le languague html"
-            />
-            <img
-              src="./assets/Icônes/react.png"
-              alt="logo reprensantant le languague html"
-            />
-            <img
-              src="./assets/Icônes/redux.png"
-              alt="logo reprensantant le languague html"
-            />
-            <img
-              src="./assets/Icônes/vite.png"
-              alt="logo reprensantant le languague html"
-            />
-            <img
-              src="./assets/Icônes/sass.png"
-              alt="logo reprensantant le languague html"
-            />
-            <img
-              src="./assets/Icônes/mongodb.png"
-              alt="logo reprensantant le languague html"
-            />
-            <img
-              src="./assets/Icônes/github.png"
-              alt="logo reprensantant le languague html"
-            />
+
+        <div class="carousel-container">
+          <div class="carousel-track">
+            <img src="./assets/Icônes/html.png" alt="HTML" />
+            <img src="./assets/Icônes/css.png" alt="CSS" />
+            <img src="./assets/Icônes/javascrip.png" alt="JavaScript" />
+            <img src="./assets/Icônes/react.png" alt="React" />
+            <img src="./assets/Icônes/redux.png" alt="Redux" />
+            <img src="./assets/Icônes/vite.png" alt="Vite" />
+            <img src="./assets/Icônes/sass.png" alt="Sass" />
+            <img src="./assets/Icônes/mongodb.png" alt="MongoDB" />
+            <img src="./assets/Icônes/github.png" alt="GitHub" />
           </div>
         </div>
       </section>
